<resources>

    <!--Intent arguments-->
    <string name="app_name">Mini Planner</string>=

    <string name="action.data_load">Data load</string>
    <string name="action.data_save">Data save</string>
    <string name="action.settings">Settings</string>
    <string name="action.cre_debug_data">Create debug data</string>
    <string name="action.edit">Edit</string>
    <string name="action.remove">Remove</string>

    <string name="title.plans">List of event</string>
    <string name="title.parties">List of participants</string>
    <string name="title.party_content">List of contributions and bays</string>
    <string name="title.contributions">Contributions</string>
    <string name="title.bays">Bays</string>

    <string name="title.plan_edit">Properties of event</string>
    <string name="title.party_edit">Properties of member</string>
    <string name="title.bay_edit">Properties of bay</string>
    <string name="title.contribution_edit">Properties of contribution</string>

    <string name="label_sum_out">Paid off</string>
    <string name="label_sum_in">Received</string>
    <string name="label.debt">Debt</string>
    <string name="label.overpay">Overpay</string>

    <!--<string name="text.debt">debt</string>-->
    <!--<string name="text.over">overpay</string>-->

    <string name="error.edit_text_empty">Value can not be empty</string>
    <string name="error.edit_text_date_format">Invalid date format (mast be DD.MM.YYYY)</string>

    <!-- Base value -->

    <string name="button.ok">OK</string>
    <string name="button.cancel">Cancel</string>

    <string name="button.yes">Yes</string>
    <string name="button.no">No</string>

    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email-->
    <!--completions."-->
    <!--</string>-->

    <string name="default.bay_description">Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_name">Name</string>
    <string name="hint_party_name">@string/hint_name</string>
    <string name="hint_date">Date</string>
    <string name="hint_sum">Sum</string>
    <string name="hint_scale">Scale</string>
    <string name="hint_description">Description</string>
    <string name="hint_to">To</string>
    <string name="data_save_path">Data save path</string>
    <string name="dialog_folder_download_create_title">There is no %s directory in the device memory</string>
    <string name="dialog_folder_download_create">Create?</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!--<string name="pref_title_language_default">Device language</string>-->
    <!--<string name="pref_description_language_default">Use device language (recommended)</string>-->
    <string name="pref_title_сhoose_language">Choose language</string>
    <string-array name="pref_language_list_titles">
        <item>Devise language</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>default</item>
        <item>en_US</item>
        <item>ru_RU</item>
    </string-array>

    <!-- Database settings -->
    <string name="pref_header_data_sync">Database</string>
    <string name="pref_title_database_path">\Path to load/unload database</string>
    <string name="pref_title_database_load">Load database</string>
    <string name="pref_title_database_unload">Unload database</string>
    <!--<string name="pref_default_display_name">John Smith</string>-->


    <!-- Example settings for Data & Sync -->

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="operation_canceled">Operation canceled</string>
    <string name="data_unloaded">Data unloaded</string>
    <string name="file_exist">File exist</string>
    <string name="rewrite_file">%s file exist, rewrite?</string>
    <string name="not_found_file">%s not found file</string>
    <string name="data_loaded">Data loaded</string>
    <string name="title_parties_count">Total number of shares</string>
    <string name="title_total_cost">Total cost</string>
    <string name="title_share">Amount per participant</string>
    <string name="total_cost_by">Total sum by</string>
    <string name="hint_share">Share of participation</string>
    <string name="label_short_share">Share:</string>
    <string name="label_share">Share of participation</string>
</resources>
