<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="180"-->
        <!--android:entries="@array/pref_sync_frequency_titles"-->
        <!--android:entryValues="@array/pref_sync_frequency_values"-->
        <!--android:key="sync_frequency"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sync_frequency" />-->

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_database_path" />
        <!--android:defaultValue="@string/pref_default_display_name"-->

    <Preference android:title="@string/pref_title_database_load">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

    <Preference android:title="@string/pref_title_database_unload">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

</PreferenceScreen>
