<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.edit.PlanEditActivity"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/edit_text_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sum"
            style="@style/Widget.AppCompat.EditText.Sum"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            style="@style/Widget.AppCompat.EditText.Date"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:text="@string/action.edit"
            style="@style/Widget.AppCompat.EditText.Name"
            />

    </android.support.design.widget.TextInputLayout>

</merge>
