<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    >

    <include layout="@layout/widget_toolbar" />

    <RelativeLayout
        android:id="@+id/layout_party_info_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.LayoutListItem"
        >

        <TextView
            android:id="@+id/text_vew_label_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/text_vew_total_cost"
            android:text="@string/title_total_cost"
            style="@style/TextAppearance.AppCompat.Subhead"
        />

        <TextView
            android:id="@+id/text_vew_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            tools:text="1000"
            style="@style/TextAppearance.AppCompat.Subhead"
            />

        <TextView
            android:id="@+id/text_vew_label_parties_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_vew_label_total_cost"
            android:layout_toStartOf="@id/text_vew_parties_count"
            android:text="@string/title_parties_count"
            style="@style/TextAppearance.AppCompat.Subhead"
            />

        <TextView
            android:id="@+id/text_vew_parties_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/text_vew_total_cost"
            android:layout_alignParentEnd="true"
            tools:text="5"
            style="@style/TextAppearance.AppCompat.Subhead"
            />

        <TextView
            android:id="@+id/text_vew_label_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_vew_label_parties_count"
            android:layout_toStartOf="@id/text_vew_share"
            android:text="@string/title_share"
            style="@style/TextAppearance.AppCompat.Subhead"
            />

        <TextView
            android:id="@+id/text_vew_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/text_vew_parties_count"
            android:layout_alignParentEnd="true"
            tools:text="200"
            style="@style/TextAppearance.AppCompat.Subhead"
            />
    </RelativeLayout>

</android.support.design.widget.AppBarLayout>
